# Nexterm

./: .dockerignore  .env.example  .env.exemple  .gitignore  .prettierrc.json  CODE_OF_CONDUCT.md  DOCKER-readme.md  Dockerfile  Dockerfile.engine  Dockerfile.server  LICENSE  NOTICE  README.md  crowdin.yml  docker-start.sh  package.json
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  language_request.yml
.github/workflows/: approve-dependabot.yml  build-cli.yml  build-connector.yml  build-docker.yml  build-engine.yml  build-mobile.yml  build-server.yml  create_release.yml  deploy-repo.yml  deploy_docker_dev.yml  deploy_docs.yml  finalize-release.yml  merge-dependabot.yml  release.yml
cli/: Cargo.toml
cli/src/: api.rs  auth.rs  config.rs  connect.rs  entries.rs  main.rs  terminal.rs  tunnel.rs
client/: index.html  package-lock.json  package.json  vite.config.js
client/src/: App.jsx  i18n.js  main.jsx
connector/: package.json
connector/src-tauri/: Cargo.toml  tauri.conf.json
connector/src-tauri/capabilities/: default.json
connector/src-tauri/icons/: icon.icns
connector/src-tauri/src/: host_fs.rs  lib.rs  tunnel.rs
docs/: ScriptingVariables.md  admin-settings.md  api-reference.md  cli.md  contributing.md  customsource.md  engines.md  index.md  installation.md  ldap.md  oidc.md  powertools-migration.md  preview.md  reverse-proxy.md  screenshots.md  scripts&snippets.md  server-cli.md  ssl.md  user-settings.md
docs/.vitepress/: config.mjs
docs/operations/: [operationId].md  [operationId].paths.mjs
docs/public/: CNAME
engine/: CMakeLists.txt
engine/src/: main.c
engine/src/core/: config.c  config.h  io.c  io.h  log.c  log.h  session.c  session.h
engine/src/net/: connection.c  connection.h  file_proto.c  file_proto.h  ftp.c  ftp.h  http_fetch.c  http_fetch.h  sftp.c  sftp.h  ssh.c  ssh.h  ssh_common.c  ssh_common.h  telnet.c  telnet.h  thumbnail.c  thumbnail.h  websocket.c  websocket.h
engine/src/proto/: control_plane.c  control_plane.h
landing/: index.html  package.json  pnpm-lock.yaml  vite.config.js
landing/src/: main.jsx
mobile/: .gitignore  analysis_options.yaml  pubspec.yaml
mobile/android/: gradle.properties
mobile/ios/: ExportOptions.plist  Podfile
mobile/lib/: main.dart
packaging/: nexterm-engine.service  nexterm-server.service  nfpm-cli.yaml  nfpm-engine.yaml  nfpm-server.yaml  server.env
packaging/scripts/: engine-postinstall.sh  engine-postremove.sh  engine-preremove.sh  server-postinstall.sh  server-postremove.sh  server-preremove.sh
schema/: control_plane.fbs  sftp_protocol.fbs
scripts/: build-engine-release.sh  build-engine.sh  build-guacd.sh  build-sea.sh  generate-openapi.js  install.sh  sea-launcher.js
server/: index.js  openapi.js
server/cli/: index.js  utils.js
server/controllers/: account.js  ai.js  apiKey.js  appSource.js  audit.js  auth.js  auth.test.js  backup.js  deviceCode.js  engine.js  entry.js  execCommand.js  folder.js  guacamoleProxy.js  identity.js  integration.js  keymap.js  ldap.js  liveSession.js  monitoring.js  oidc.js  organization.js  passkey.js  permission.js  pve.js  pveServer.js  script.js  server.js  serverSession.js  session.js  snippet.js  source.js  tag.js  theme.js
server/hooks/: guacamole.js  pve-lxc.js  script.js  ssh.js  telnet.js
server/lib/: ClientConnection.js  ConnectionService.js  EngineSftpClient.js  GuacdClient.js  ScriptLayer.js  SessionManager.js  StateBroadcaster.js  engineFetch.js  guacParamBuilders.js
server/middlewares/: auditMiddleware.js  auth.js  guacamole.js  permission.js  pve.js  wsAuth.js
server/migrations/: 0001-initial-database-setup.js  0002-add-organization-id.js  0003-migrate-old.js  0004-encrypt-data.js  0005-make-first-user-admin.js  0006-update-organization-members-primary-key.js  0007-remove-owner-id-from-organizations.js  0008-add-internal-auth-provider.js  0009-add-node-name-to-pve-servers.js  0010-add-audit-system.js  0011-unified-schema-migration.js  0012-add-tags.js  0013-add-keymaps.js  0014-add-session-sync.js  0015-remove-app-sources.js  0016-add-scripts.js  0017-add-organization-to-snippets-and-scripts.js  0018-add-sources.js  0019-cleanup-audit-settings.js  0020-add-passkeys.js  0020-add-sort-order-to-snippets-and-scripts.js  0021-split-monitoring-data.js  0022-add-integration-monitoring.js  0023-add-monitoring-settings.js  0024-add-os-filter-to-snippets.js  0025-add-backup-settings.js  0026-add-ldap-providers.js  0027-add-preferences-to-accounts.js  0027-add-preferences.js  0028-migrate-icon-names.js  0029-add-device-codes.js  0030-add-backup-providers.js  0031-add-engines.js  0032-add-themes.js  0034-add-permission-system.js  0035-add-ai-agent.js  0036-add-registration-toggle.js  0037-modular-integration-folders.js  0038-add-api-keys.js  0039-drop-script-timestamps.js  (+2 more)
server/models/: AISettings.js  Account.js  AccountPermission.js  ApiKey.js  AppSource.js  AuditLog.js  BackupProvider.js  BackupSettings.js  Credential.js  DeviceCode.js  Engine.js  Entry.js  EntryIdentity.js  EntryTag.js  Folder.js  GroupMember.js  GroupPermission.js  Identity.js  Integration.js  Keymap.js  LDAPProvider.js  MonitoringData.js  MonitoringSettings.js  MonitoringSnapshot.js  OIDCProvider.js  Organization.js  OrganizationMember.js  OrganizationMemberPermission.js  PVEServer.js  Passkey.js  PermissionGroup.js  Script.js  Server.js  ServerMonitoring.js  Session.js  Snippet.js  Source.js  Tag.js  Theme.js
server/permissions/: engine.js  registry.js
server/routes/: account.js  ai.js  aiWS.js  apiKey.js  appInstaller.js  apps.js  audit.js  auth.js  authProviders.js  backup.js  backupExport.js  engine.js  entry.js  folder.js  guac.js  identity.js  integration.js  keymap.js  monitoring.js  oidc.js  organization.js  passkey.js  permissions.js  pveLXC.js  pveQEMU.js  pveServer.js  scriptExecutor.js  scripts.js  server.js  serverSession.js  service.js  session.js  sftp.js  sftpDownload.js  sftpWS.js  share.js  snippet.js  source.js  sshd.js  state.js  (+5 more)
server/templates/: env.html
(+805 files in other folders)
