[package]
name = "nt"
version = "0.1.0"
edition = "2021"
description = "CLI client for Nexterm"
authors = ["Mathias Wagner"]
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
reqwest = { version = "0.12", features = ["json", "native-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dialoguer = { version = "0.11", features = ["fuzzy-select"] }
console = "0.15"
crossterm = "0.28"
dirs = "6"
open = "5"
anyhow = "1"
futures-util = "0.3"
indicatif = "0.17"
nucleo-matcher = "0.3"

[profile.release]
strip = true
lto = true
codegen-units = 1
