[package]
name = "nexterm-connector"
version = "0.1.0"
description = "The open source server management software for SSH, VNC & RDP"
authors = ["Mathias Wagner"]
license = "MIT"
repository = "https://github.com/gnmyt/Nexterm"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
tauri = { version = "2.9.5", features = [] }
tauri-plugin-http = "2"
