[package]
name = "nexterm-connector"
version = "1.0.8"
description = "The open source server management software for SSH, VNC & RDP"
authors = ["Mathias Wagner"]
license = "MIT"
repository = "https://github.com/gnmyt/Nexterm"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
tauri = { version = "2.9.5", features = [] }
tauri-plugin-http = { version = "2", default-features = false, features = ["charset", "cookies", "http2", "gzip", "native-tls"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"
